Fri Aug 14 22:54:02 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        * bin/DCPS/HTemplate.pm:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/InstanceState.h:
        * dds/DCPS/InstanceState.inl:
        * dds/DCPS/InstanceState.cpp:
        * dds/DCPS/ReceivedDataElementList.cpp:
        * tests/DCPS/unit/MyTypeSupportImpl.h:

          Bugfixes to READER_DATA_LIFECYCLE support.
        
        * dds/DCPS/PublisherImpl.cpp:

          Commented out unregister on delete; causes stack corruption on
          associated readers when data is received (requires further
          research).
        
        * dds/DCPS/Service_Participant.cpp:

          Updated QoS defaults; stripped trailing spaces.

Thu Aug 13 22:58:29 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/unit/MyTypeSupportImpl.h:

          Added missing implementation for MyDataReaderImpl::release_data.

Thu Aug 13 22:43:00 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/jms/README:
        * java/jms/src/org/opendds/jms/qos/ParticipantQosPolicy.java:
        * java/jms/src/org/opendds/jms/qos/PublisherQosPolicy.java:
        * java/jms/src/org/opendds/jms/qos/SubscriberQosPolicy.java:

          Enabled support for ENTITY_FACTORY QoS.

Thu Aug 13 22:17:02 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        * bin/DCPS/HTemplate.pm:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/InstanceState.h:
        * dds/DCPS/InstanceState.inl:
        * dds/DCPS/InstanceState.cpp:
        * dds/DCPS/Qos_Helper.inl:
        * dds/DCPS/SubscriptionInstance.h:

          Added support for READER_DATA_LIFECYCLE.

Thu Aug 13 19:01:44 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/PublisherImpl.cpp:

          Re-enabled unregister on delete for scoreboard testing.
